--- a/static/css/donor_login.css
+++ b/static/css/donor_login.css
@@ -10,11 +10,18 @@ body {
 
 /* Header */
 header {
-    background: #d32f2f;
-    padding: 20px;
-    text-align: center;
+    background: #b30000;
     color: white;
-    font-size: 26px;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav a {
+    color: white;
+    margin-left: 15px;
+    text-decoration: none;
     font-weight: bold;
 }
 
