--- a/templates/donor_login.html
+++ b/templates/donor_login.html
@@ -14,6 +14,18 @@
 
 <body>
 
+<header>
+        <div class="logo">🩸 Blood Bank</div>
+        <nav>
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('donor_login') }}">Donor Login</a>
+            <a href="{{ url_for('donor_register') }}">Donor Register</a>
+            <a href="{{ url_for('search_blood') }}">Find Blood</a>
+            <a href="{{ url_for('hospital_login') }}">Hospital</a>
+            <a href="{{ url_for('admin_login') }}">Admin</a>
+        </nav>
+    </header>
+
     <!-- Flash Popup Alerts -->
     {% with messages = get_flashed_messages() %}
         {% if messages %}
