--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -7,6 +7,18 @@
 
 <body>
 
+<header>
+        <div class="logo">🩸 Blood Bank</div>
+        <nav>
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('donor_login') }}">Donor Login</a>
+            <a href="{{ url_for('donor_register') }}">Donor Register</a>
+            <a href="{{ url_for('search_blood') }}">Find Blood</a>
+            <a href="{{ url_for('hospital_login') }}">Hospital</a>
+            <a href="{{ url_for('admin_login') }}">Admin</a>
+        </nav>
+    </header>
+
 <h1 class="title">Admin Control Panel</h1>
 
 <!-- BLOOD STOCK SECTION -->
@@ -16,6 +28,7 @@
     <table>
         <thead>
         <tr>
+            <th>Blood Bank</th>
             <th>Blood Group</th>
             <th>Units</th>
             <th>Update</th>
