--- a/templates/hospital_login.html
+++ b/templates/hospital_login.html
@@ -3,16 +3,15 @@
 <head>
     <title>Blood Bank Login</title>
 
-    <!-- Bootstrap for alerts -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Your custom CSS -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/hospital_login.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/hospital_login.css') }}">
 
 </head>
 <body>
-    <h2>Login</h2>
+
     <form action="/login" method="POST">
+
+        <h2>Login</h2>  <!-- Moved INSIDE the form -->
 
         <div class="form-group">
             <label for="username">Username:</label>
@@ -25,10 +24,11 @@
         </div>
 
         <div class="links">
-            <a href="hospital_register.html">New User</a>
+          <center>  <a href="hospital_register.html">New User</a> </center>
         </div>
 
         <button type="submit">Login</button>
     </form>
+
 </body>
 </html>
