--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,8 @@
             <p>One small donation can save someone's entire world.</p>
 
             <div class="btn-group">
-                <a class="btn" href="{{ url_for('donor_register') }}">Become a Donor</a>
-                <a class="btn-outline" href="{{ url_for('search_blood') }}">Search Blood</a>
+               <center> <a class="btn" href="{{ url_for('donor_register') }}">Become a Donor</a></center>
+
             </div>
 
         </div>
