--- a/templates/donor_register.html
+++ b/templates/donor_register.html
@@ -60,7 +60,7 @@
             <button type="submit" class="btn">Register</button>
 
             <div class="links">
-                <p>Already a donor? <a href="/donor_login">Login here</a></p>
+                <p>Already a donor? <a href="/donor_login.html">Login here</a></p>
             </div>
 
         </form>
