--- a/templates/hospital_login.html
+++ b/templates/hospital_login.html
@@ -24,7 +24,8 @@
         </div>
 
         <div class="links">
-          <center>  <a href="hospital_register.html">New User</a> </center>
+          <center>  <a href="{{ url_for('hospital_register') }}" class="new-user-link">New User? Register</a>
+ </center>
         </div>
 
         <button type="submit">Login</button>
