--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,7 +43,7 @@
 /* HERO SECTION WITH IMAGE */
 .hero {
     height: 75vh;
-    background-image: url("../images/blood 2.jpg");
+    background-image: url("../images/blood 2.jpg");/*fhhfhfh
    /* ⭐ PUT YOUR IMAGE HERE */
     background-size: cover;
     background-position: center;
