--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-       <div class="logo">রক্তবীজ</div>
+       <div class="logo">VITAL BLOOD CONNECT</div>
 
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
